home page design start

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      <a  class="header-text" >Contact-Us on :9382023890</a>
-      <a  class="header-text">Email :sample@gmail.com</a>
-      <a  class="header-text">Timeing :8:00am to 10:00pm</a>
+  <ion-grid>
+  <ion-row>
+    <ion-col>
+      <p  class="header-text" >Call :<a class="contact-info" > 9382023890</a> </p>
+    </ion-col>
+    <ion-col>
+      <p class="header-text">Email :<a class="contact-info" > sample@gmail.com</a> </p>
+    </ion-col>
+    <ion-col>
+      <p  class="header-text">Timing :<a class="contact-info"> 8:00am to 10:00pm</a> </p>
+    </ion-col>
+    <ion-col>
+      ion-col
+    </ion-col>
+  </ion-row>
+  </ion-grid>
+
+
+
+      
+    
+      
+    
+
     </ion-title>
   </ion-toolbar>
 </ion-header>
